# buff

./: .gitignore  README.md  buff_predictor_debug.csv  plot_angle_fit.py  test_buff_model.py
launch/: buff_system.launch.py
rm_vision_bringup/: CMakeLists.txt  package.xml
rm_vision_bringup/config/: auto_aim_solver_param.yaml  auto_buff.yaml  buff_param.yaml  camera_param.yaml  launch_params.yaml  rm_auto_aim_param.yaml
rm_vision_bringup/launch/: auto_buff.launch.py  buff_only_3nodes.launch.py  vision_bringup.launch.py
src/: README.md
src/InfantryContact/: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  package.xml
src/InfantryContact/config/: contact_node.yaml
src/InfantryContact/include/: Checksum.h  CommPort.h  Content.hpp  RxMsg.hpp  TxMsg.hpp  filter.h  params.hpp  pid.h
src/InfantryContact/launch/: contact_node.launch.py
src/InfantryContact/serial/lib/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/InfantryContact/src/: Checksum.cpp  CommPort.cpp  ContactNode.cpp
src/buff_aimer/: CMakeLists.txt  README.md  package.xml
src/buff_aimer/src/: aimer.cpp
src/buff_debug_visualizer/: CMakeLists.txt  package.xml
src/buff_debug_visualizer/src/: debug_visualizer.cpp
src/buff_detector/: CMakeLists.txt  README.md  package.xml
src/buff_detector/config/: buff_detector.yaml
src/buff_detector/include/buff_detector/: config.hpp  detector.hpp  yolo_inference.hpp
src/buff_detector/src/: detector.cpp  detector_node.cpp  yolo_inference.cpp
src/buff_estimator/: CMakeLists.txt  README.md  package.xml
src/buff_estimator/include/: dataProcessor.hpp  predictor.hpp  world_model.hpp
src/buff_estimator/src/: dataProcessor.cpp  estimator_node.cpp  predictor.cpp
src/buff_interfaces/: CMakeLists.txt  package.xml
src/buff_interfaces/msg/: BuffAimingData.msg  BuffPrediction.msg  BuffTarget.msg  BuffWorldModel.msg
src/buff_predictor/: CMakeLists.txt  package.xml
src/buff_predictor/config/: buff_predictor.yaml
src/buff_predictor/include/: config.hpp  coordinate_solver.hpp  predictor.hpp
src/buff_predictor/src/: dataProcessor.cpp  predictor.cpp  predictor_node.cpp
src/buff_solver/: CMakeLists.txt  package.xml
src/buff_solver/src/: solver.cpp
src/camera/: .clang-format  .gitignore  CMakeLists.txt  README.md  calibrate.py  package.xml
src/camera/config/: param.yaml
src/camera/include/: CamWrapper.h  CamWrapperDH.h  DxImageProc.h  GxIAPI.h  camera_params.hpp
src/camera/launch/: camera.launch.py
src/camera/src/: CamNode.cpp  CamWrapper.cpp  disabled_camera_node.cpp
src/gary_msgs/: CMakeLists.txt  README.md  package.xml
src/gary_msgs-main/msg/: AutoAIM.msg  AutoAimDebug.msg
src/gary_msgs/msg/: AutoAIM.msg  AutoAimDebug.msg
src/gimbal_tf_publisher/: CMakeLists.txt  README.md  package.xml
src/gimbal_tf_publisher/src/: joint_tf_publisher.cpp  quaternion_tf_publisher.cpp
src/image_publisher/: CMakeLists.txt  package.xml
src/image_publisher/src/: image_publisher.cpp  image_publisher_node.cpp
src/rm_buff_aimer/: CMakeLists.txt  package.xml
src/rm_buff_aimer/src/: aimer_node.cpp
src/rm_buff_common/: CMakeLists.txt  package.xml
src/rm_buff_common/include/rm_buff_common/: extended_kalman_filter.hpp  math_utils.hpp  ransac_sine_fitter.hpp  trajectory.hpp
src/rm_buff_common/src/: extended_kalman_filter.cpp  math_utils.cpp  ransac_sine_fitter.cpp  trajectory.cpp
src/rm_buff_detector/: CMakeLists.txt  package.xml
src/rm_buff_detector/src/: detector_node.cpp
src/rm_buff_solver/: CMakeLists.txt  package.xml
src/rm_buff_solver/src/: solver_node.cpp
src/rm_buff_tracker/: CMakeLists.txt  package.xml
src/rm_buff_tracker/src/: tracker_node.cpp
src/rm_gimbal_description/: CMakeLists.txt  README.md
src/rm_gimbal_description/urdf/: rm_gimbal.urdf.xacro
src/rm_vision_bringup/config/: buff_param.yaml  camera_param.yaml
src/rm_vision_bringup/launch/: vision_bringup.launch.py
src/rm_vision_interfaces/: CMakeLists.txt  package.xml
src/rm_vision_interfaces/msg/: BuffDetection.msg  BuffPose.msg  BuffTarget.msg  GimbalCommand.msg
