<?xml version="1.0"?>
<package format="3">
  <name>rm_vision_bringup</name>
  <version>0.0.1</version>
  <description>Launch and configuration files for RM vision ROS2 nodes.</description>
  <maintainer email="todo@example.com">rm_vision</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gimbal_tf_publisher</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>rm_gimbal_description</exec_depend>
  <exec_depend>rm_buff_aimer</exec_depend>
  <exec_depend>rm_buff_detector</exec_depend>
  <exec_depend>rm_buff_solver</exec_depend>
  <exec_depend>rm_buff_tracker</exec_depend>
  <exec_depend>rm_vision_interfaces</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
