<?xml version="1.0"?>
<package format="3">
  <name>rm_vision_bringup</name>
  <version>0.0.1</version>
  <description>Launch and configuration files for the buff vision pipeline.</description>
  <maintainer email="todo@example.com">rm_vision</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>buff_detector</exec_depend>
  <exec_depend>buff_estimator</exec_depend>
  <exec_depend>buff_aimer</exec_depend>
  <exec_depend>camera</exec_depend>
  <exec_depend>gimbal_tf_publisher</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>rm_gimbal_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
