<?xml version="1.0"?>
<package format="3">
  <name>buff_aimer</name>
  <version>0.1.0</version>
  <description>Buff aimer: predicts hit position, solves ballistics, and publishes gimbal commands.</description>
  <maintainer email="1479166155@qq.com">lee0721</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>buff_interfaces</depend>
  <depend>gary_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>Eigen3</depend>
  <depend>rclcpp_components</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
