<?xml version="1.0"?>
<package format="3">
  <name>buff_debug_visualizer</name>
  <version>0.1.0</version>
  <description>Debug image visualizer for the buff world circle model.</description>
  <maintainer email="1479166155@qq.com">lee0721</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>buff_interfaces</depend>
  <depend>Eigen3</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
