<?xml version="1.0"?>
<package format="3">
  <name>rm_buff_common</name>
  <version>0.0.1</version>
  <description>Shared math and trajectory utilities for buff ROS2 nodes.</description>
  <maintainer email="todo@example.com">rm_vision</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
