<?xml version="1.0"?>
<package format="3">
  <name>rm_buff_detector</name>
  <version>0.0.1</version>
  <description>Buff detector ROS2 component.</description>
  <maintainer email="todo@example.com">rm_vision</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rm_vision_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <exec_depend>compressed_image_transport</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
