<?xml version="1.0"?>
<package format="3">
  <name>rm_buff_solver</name>
  <version>0.0.1</version>
  <description>Buff PnP solver ROS2 component.</description>
  <maintainer email="todo@example.com">rm_vision</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rm_buff_common</depend>
  <depend>rm_vision_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
