<?xml version="1.0"?>
<package format="3">
  <name>rm_vision_interfaces</name>
  <version>0.0.1</version>
  <description>ROS2 interfaces for RM vision commands.</description>
  <maintainer email="todo@example.com">rm_vision</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
